
syntax = "proto3";

option java_package="com.milchstrabe.rainbow.skt.server.grpc";

message MsgRequest{
    string msgId = 1;
    int32 msgType = 2;
    string content = 3;
    string sender = 4;
    string receiver = 5;
    string date = 6;

}

message MsgResponse{
    int32 code = 1;
    string msg = 2;
}


service PassThroughMessageService{
    rpc passThroughMessage (MsgRequest) returns (MsgResponse){}
}